[package]
name = "getrandom_or_panic"
version = "0.0.1"
edition = "2021"

[dependencies]
rand_core = { version = "0.6.2", default-features = false }
rand = { version = "0.8.5", optional = true }

[features]
default = ["std", "getrandom"]
alloc = ["rand_core/alloc"]
std = ["alloc", "getrandom", "rand"]
getrandom = ["rand_core/getrandom"]
